[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/entities/enemies/Enemy_chaser.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/enemies/Ranged_enemy.gd" type="Script" id=2]
[ext_resource path="res://src/shaders/BlackWhite.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.5, 30.25 )

[sub_resource type="CircleShape2D" id=1]
radius = 300.167

[node name="Ranged_enemy" instance=ExtResource( 1 )]
light_mask = 3
scale = Vector2( 2, 2 )
collision_mask = 6
script = ExtResource( 2 )
speed = 10000.0
color_number = 1

[node name="Sprite" parent="." index="0"]
modulate = Color( 0, 1, 0.0156863, 1 )
material = SubResource( 4 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.5, 1.25 )
shape = SubResource( 3 )

[node name="Range" type="Area2D" parent="." index="4"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 1 )

[node name="Timer_shoot" type="Timer" parent="." index="5"]

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="Timer_shoot" to="." method="_on_Timer_shoot_timeout"]
